fix text-align center

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -515,6 +515,7 @@ h2 {
     color: #ffffff;
     padding: 120px 10px 100px 0;
     font-weight: normal;
+    text-align: center;
 }
 
 .review-block {
